教科の登録まで完了

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activity.SubjectActivity"></activity>
         <activity
             android:name=".activity.MainActivity"
             android:screenOrientation="portrait">
@@ -23,7 +24,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.SubjectsListActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
