--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kiprogram.kitimetable">
 
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -30,6 +33,11 @@
         <activity
             android:name=".activity.SubjectsListActivity"
             android:screenOrientation="portrait" />
+
+        <receiver
+            android:name=".receiver.EveryMorningAlarmReceiver"
+            android:process=":remote" >
+        </receiver>
     </application>
 
 </manifest>
